# Rust

calc/: Cargo.toml
calc/src/: main.rs
src/: main.rs
task_manager/: Cargo.toml  tasks.json
task_manager/src/: main.rs
websocket_chat/client_auth/: Cargo.toml  index.html  styles.css
websocket_chat/client_auth/src/: lib.rs
websocket_chat/server_auth/: Cargo.toml  saved-messages.json
websocket_chat/server_auth/src/: main.rs
