[package]
name = "client_auth"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "WebSocket", 
    "MessageEvent", 
    "ErrorEvent", 
    "HtmlInputElement"
] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.39"
wasm-logger = "0.2.0"
gloo-net = "0.6.0"
wasm-bindgen-futures = "0.4.49"

[lib]
crate-type = ["cdylib", "rlib"]
