[package]
name = "server_auth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
axum-server = "0.7.1"
bcrypt = "0.16.0"
futures-util = { version = "0.3.31", features = ["sink"] }
hyper = "1.5.2"
jsonwebtoken = "9.3.0"
serde = { version = "1",  features = ["derive"] }
serde_json = "1.0.133"
sqlx = {version = "0.8.2", features = [ "postgres", "runtime-tokio", "tls-native-tls", "time"]}
time = "0.3.37"
tokio = { version = "1.42.0", features = ["full", "net"] }
tokio-tungstenite = "0.26.0"
tokio-websockets = { version = "0.10.1", features = ["server", "sha1_smol"] }
tower-http = { version = "0.6.2", features = ["cors"] }
